--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
+spring.application.name=question-service
+
 spring.datasource.url=jdbc:mysql://localhost:3306/management
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-logging.level.org.hibernate=DEBUG
-logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.springframework=DEBUG
+
+
+
